Bug 1289957 (Part 1) - Fix minor style issues in RasterImage::NotifyProgress. r=edwin